--- a/app/src/main/res/layout/item_coin.xml
+++ b/app/src/main/res/layout/item_coin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="56dp"
@@ -7,38 +8,51 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingEnd="16dp"
-    android:paddingStart="16dp">
+    android:paddingStart="16dp"
+    >
 
-    <TextView android:layout_marginStart="16dp"
-        android:id="@+id/tvSymbol"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        tools:text="BTC" />
+  <TextView
+      android:id="@+id/tvSymbol"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
+      android:background="@drawable/bg_coin_symbol"
+      android:gravity="center"
+      android:maxLines="1"
+      android:paddingEnd="5dp"
+      android:paddingStart="5dp"
+      android:textColor="#FFFFFF"
+      android:textStyle="bold"
+      app:autoSizeMinTextSize="8dp"
+      app:autoSizeTextType="uniform"
+      tools:ignore="MissingPrefix"
+      tools:text="BTC"
+      />
 
-    <TextView
-        android:id="@+id/tvName"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center_vertical|left"
-        tools:text="Bitcoin" />
+  <TextView
+      android:id="@+id/tvName"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_weight="1"
+      android:gravity="center_vertical|start"
+      tools:text="Bitcoin"
+      />
 
-    <TextView
-        android:id="@+id/tvPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center_vertical|right"
-        tools:text="10000$" />
+  <TextView
+      android:id="@+id/tvPrice"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_weight="1"
+      android:gravity="center_vertical|end"
+      tools:text="10000$"
+      />
 
-    <TextView
-        android:id="@+id/tvChange"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center_vertical|right"
-        tools:text="-14%" />
+  <TextView
+      android:id="@+id/tvChange"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_weight="1"
+      android:gravity="center_vertical|end"
+      tools:text="-14%"
+      />
 
 </LinearLayout>
