--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
   <color name="colorPrimary">#3F51B5</color>
   <color name="colorPrimaryDark">#303F9F</color>
   <color name="colorAccent">#FF4081</color>
-</resources>
+
+
+  <color name="percentChangePositive">#64dd17</color>
+  <color name="percentChangeNegative">#d50000</color>
+
+    </resources>
